deploy/admin.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-deployment
  labels:
    app: admin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin
  template:
    metadata:
      labels:
        app: admin
    spec:
      containers:
        - name: admin
          image: trieuvu/admin
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: "100Mi"
              cpu: "100m"
---
apiVersion: v1
kind: Service
metadata:
  name: admin-service
spec:
  selector:
    app: admin
  ports:
    - port: 80
      targetPort: 80
  type: NodePort
