deploy/recommend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recommend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: recommend
  template:
    metadata:
      labels:
        app: recommend
    spec:
      containers:
        - name: recommend
          image: trieuvu/recommend
          ports:
            - containerPort: 5000
          resources:
            limits:
              memory: "200Mi"
              cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: recommend-service
spec:
  selector:
    app: recommend
  ports:
    - port: 5000
      name: http
      targetPort: 5000
      protocol: TCP
  type: NodePort
  # type: LoadBalancer  # Sử dụng LoadBalancer nếu bạn muốn truy cập từ bên ngoài
