deploy/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: default
  # annotations:
  #   cert-manager.io/issuer: "letsencrypt-prod" # get the certificate from letsencrypt-prod
spec:
  # tls:
  # - hosts:
  #   - localhost # Change this to your domain
  #   secretName: tls-secret
  ingressClassName: nginx
  rules:
  - host: localhost # Change this to your domain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: client-service
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 8001
      - path: /recommend
        pathType: Prefix
        backend:
          service:
            name: recommend-service
            port:
              number: 5000
      - path: /predict
        pathType: Prefix
        backend:
          service:
            name: predict-service
            port:
              number: 5001
  - host: admin.localhost # Change this to your domain
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: admin-service
              port:
                number: 80
